fixed alignments and changed background colour

--- a/client/src/pages/trackorder/Trackorder.module.css
+++ b/client/src/pages/trackorder/Trackorder.module.css
@@ -1,6 +1,6 @@
 .Green {
-    background-color: #7da7a5;
-    padding: 20px
+    background-color: #bee3db;
+    padding: 30px;
 }
 
 .Yellow {
@@ -8,34 +8,34 @@
     width: 80%;
     margin: auto;
     padding: 20px;
-
+    border-radius: 1vh;
 }
 
 .SmallLine {
     width: 5vw;
-    height: 5px;
-    background-color: darkslategrey;
+    height: 2px;
+    background-color: rgb(61, 81, 81);
     border-radius: 1rem;
     display: inline-flex;
     align-self: center;
 }
 
+
 .LongLine {
-    width: 52vw;
-    height: 5px;
-    background-color: darkslategrey;
+    width: 50vw;
+    height: 2px;
+    background-color: rgb(61, 81, 81);
     border-radius: 1rem;
     display: inline-flex;
 }
 
 .LongLine2 {
-    width: 48vw;
-    height: 5px;
-    background-color: darkslategrey;
+    width: 45vw;
+    height: 2px;
+    background-color: rgb(61, 81, 81);
     border-radius: 1rem;
     display: inline-flex;
 }
-
 
 .Header h1 {
     display: inline-flex;
@@ -49,16 +49,16 @@
 }
 
 
-.Circle1 {
+.circle1, .circle2, .circle3 {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: darkslategrey;
+    background-color: rgb(37, 205, 37);
     vertical-align: auto;
     margin: auto;
 }
 
-.Circle2 {
+.circle4, .circle5, .circle6 {
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -66,16 +66,18 @@
     vertical-align: auto;
     margin: auto;
     border-style: dashed;
-    border-inline-color: darkslategrey;
+
 }
 
 .progress {
-    display: inline-flex;
-    padding: 50px;
+    display: flex;
+    padding: 3vh;
+
 }
 
 .progress img {
     vertical-align: auto;
+margin-left: 1.3vw;
 }
 
 .footer {
@@ -89,7 +91,8 @@
 
 .footer2 {
     display: inline-flex;
-    padding:30px;
+    padding-top: 10px;
+    padding-left: 30px;
     width:100%;
 }
 
